EDN read/write (untested) for flat embeddings